gateway/security/jwt/entraID/flights/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flights-ingress
  annotations:
    hub.traefik.io/api: flights-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`flights.traefik-airlines`) || Host(`flights.traefik-airlines.localhost`)
      services:
        - name: flights-app
          port: 3000
      middlewares:
        - name: jwt-entra-id
